chore: coordinate move to new naming schema

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@iqkv/boot-parent-pom",
+  "name": "@daromir/boot-parent-pom",
   "version": "25.0.0",
   "description": "Provide an optional Git commit hooks.",
   "private": true,
