chore: generalize naming for checkstyle config name and path

--- a/pom.xml
+++ b/pom.xml
@@ -684,7 +684,7 @@
                     </dependencies>
                     <configuration>
                         <sourceDirectories>${basedir}/src</sourceDirectories>
-                        <configLocation>iqkv-common-checkstyle.xml</configLocation>
+                        <configLocation>maven-project-common-checkstyle.xml</configLocation>
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
                     </configuration>
                     <executions>
