--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <iqkv.platform.version>25.0.0-SNAPSHOT</iqkv.platform.version>
 
 
-        <spring-boot.version>3.4.2</spring-boot.version>
+        <spring-boot.version>3.4.3</spring-boot.version>
         <spring-kafka.version>3.3.3</spring-kafka.version>
 
         <spring-cloud-dependencies.version>2024.0.0</spring-cloud-dependencies.version>
@@ -52,7 +52,7 @@
         <jakarta.validation-api.version>3.1.1</jakarta.validation-api.version>
         <hibernate-validator.version>8.0.2.Final</hibernate-validator.version>
 
-        <hibernate.version>6.6.8.Final</hibernate.version>
+        <hibernate.version>6.6.9.Final</hibernate.version>
         <postgresql.version>42.7.5</postgresql.version>
         <r2dbc-postgresql.version>1.0.7.RELEASE</r2dbc-postgresql.version>
         <mysql-connector.version>9.2.0</mysql-connector.version>
@@ -62,7 +62,7 @@
         <ehcache.version>3.10.8</ehcache.version>
 
         <liquibase.version>4.31.1</liquibase.version>
-        <flyway.version>11.3.3</flyway.version>
+        <flyway.version>11.3.4</flyway.version>
 
         <kafka-streams.version>3.9.0</kafka-streams.version>
         <jjwt.version>0.12.6</jjwt.version>
@@ -73,36 +73,36 @@
 
         <micrometer.version>1.14.4</micrometer.version>
         <micrometer-tracing.version>1.4.3</micrometer-tracing.version>
-        <datasource-micrometer.version>1.0.6</datasource-micrometer.version>
+        <datasource-micrometer.version>1.1.0</datasource-micrometer.version>
         <zipkin-reporter.version>3.5.0</zipkin-reporter.version>
         <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
-        <logback.version>1.5.16</logback.version>
-        <logback-classic.version>1.5.16</logback-classic.version>
+        <logback.version>1.5.17</logback.version>
+        <logback-classic.version>1.5.17</logback-classic.version>
         <loki-logback-appender.version>1.6.0</loki-logback-appender.version>
         <lombok.version>1.18.36</lombok.version>
 
-        <testcontainers.version>1.20.4</testcontainers.version>
+        <testcontainers.version>1.20.5</testcontainers.version>
         <playtika-testcontainers.version>3.1.11</playtika-testcontainers.version>
         <archunit.version>1.4.0</archunit.version>
-        <awaitility.version>4.2.2</awaitility.version>
+        <awaitility.version>4.3.0</awaitility.version>
         <testng.version>7.11.0</testng.version>
         <mockito.version>5.15.2</mockito.version>
 
         <springdoc.version>2.8.5</springdoc.version>
         <springdoc-webflux-ui.version>1.8.0</springdoc-webflux-ui.version>
-        <spring-modulith.version>1.3.2</spring-modulith.version>
+        <spring-modulith.version>1.3.3</spring-modulith.version>
         <cucumber-bom.version>7.21.1</cucumber-bom.version>
 
-        <openapi-generator-maven-plugin.version>7.11.0</openapi-generator-maven-plugin.version>
+        <openapi-generator-maven-plugin.version>7.12.0</openapi-generator-maven-plugin.version>
         <gaul.modernizer-maven-plugin.version>3.1.0</gaul.modernizer-maven-plugin.version>
         <codehaus.versions-maven-plugin.version>2.18.0</codehaus.versions-maven-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <maven-checkstyle-plugin.version>3.6.0</maven-checkstyle-plugin.version>
         <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
-        <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
+        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
         <sonar-maven-plugin.version>5.0.0.4389</sonar-maven-plugin.version>
         <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
-        <puppycrawl.checkstyle.version>10.21.2</puppycrawl.checkstyle.version>
+        <puppycrawl.checkstyle.version>10.21.3</puppycrawl.checkstyle.version>
         <git-commit-id-plugin.version>9.0.1</git-commit-id-plugin.version>
         <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
@@ -113,7 +113,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.2</version>
+        <version>3.4.3</version>
         <relativePath/>
     </parent>
 
@@ -678,13 +678,13 @@
                         </dependency>
                         <dependency>
                             <groupId>com.iqkv.checkstyle</groupId>
-                            <artifactId>iqkv-checkstyle-config</artifactId>
+                            <artifactId>checkstyle-config</artifactId>
                             <version>${iqkv.platform.version}</version>
                         </dependency>
                     </dependencies>
                     <configuration>
                         <sourceDirectories>${basedir}/src</sourceDirectories>
-                        <configLocation>iqkv-common-checkstyle.xml</configLocation>
+                        <configLocation>maven-project-common-checkstyle.xml</configLocation>
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
                     </configuration>
                     <executions>
